# hermes-a2a-plugin

./: .gitignore  CHANGELOG.md  CODY_PHASE2.md  README.md  plugin.yaml  pyproject.toml  setup.sh
docs/: A2A-PLUGIN-HANDOFF-TO-TESLA.md  SETUP-FOR-PROTEUS.md  USER-MANUAL.md
docs/changes/: 2026-05-20-a2a-node-id-fix.md  2026-05-20-a2a-outbound-client.md  2026-05-20-a2a-phase0-validation.md  2026-05-20-a2a-phase1-bootstrap.md  2026-05-20-a2a-phase1-checkpoint.md  2026-05-20-a2a-phase1-complete.md  2026-05-20-a2a-signing-and-version.md  2026-05-21-a2a-env-var-overrides.md  2026-05-21-a2a-mesh-watchdog.md  2026-05-21-a2a-p0-audit-logger-guard.md  2026-05-21-a2a-peer-reconnection.md  2026-05-21-a2a-phase2-3-build-complete.md  2026-05-21-a2a-phase2-3-gate-completion.md  2026-05-21-a2a-phase4-orchestration-complete.md  2026-05-21-a2a-phase5-complete.md  2026-05-21-a2a-provenance-tracking.md  2026-05-21-a2a-rate-limiting.md
docs/decisions/: adr-001-signing.md
docs/founding/: a2a-core-scope-tesla.md  a2a-domain-contracts.md  a2a-orchestration-patterns.md  a2a-plugin-architecture.md
docs/guides/: a2a-plugin-runbook.md
docs/references/: a2a-external-surface.md  a2a-intent-schemas.md  a2a-phase6-research-decision-trail.md  a2a-protocol-links.md  a2a-spec-summary.md  architecture.md  config-reference.md  intent-schemas.md  partner-onboarding.md  signing-adr.md  troubleshooting.md
docs/research/: milestone-0-blockers.md
docs/runbooks/: a2a-peer-setup.md
docs/skill-refs/: a2a-adapter-integration.md  (+4 more)
scripts/: mesh-watchdog.py  start-server.py
tests/: conftest.py
(+57 files in other folders)
